<resources>
    <string name="app_name">Mudar senha</string>
    <string name="activity_main_title">Mudar Senha</string>
    <string name="activity_confirmation_title">OK</string>
    <string name="message_top">Para fazer uma <b>nova senha</b>, basta seguir estas regrinhas básicas:</string>
    <string name="rule_first">- escolher no mínimo 6 caracters;</string>
    <string name="rule_second">- ter pelo menos 1 número;</string>
    <string name="security_info">E para sua segurança, não utilize infos pessoais como data
        de nascimento e nem sequências como \"123456\" ou \"abcdef\", ok?</string>
    <string name="hint_new_password">nova senha</string>
    <string name="hint_repeat_password">repetir nova senha</string>
    <string name="button_confirm">confirmar</string>
    <string name="hint_password_match_error">ops as senhas não são iguais</string>
    <string name="hint_password_number_error">ops sua senha não possui um número</string>
    <string name="hint_password_length_error">ops sua senha é curta demais</string>
    <string name="confirmation_message">Cadastro realizado com sucesso ;)</string>
    <string name="ok">OK</string>
    <string name="loading_message">carregando...</string>
</resources>
