<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:fillViewport="false"
    tools:context="com.munstein.passwordreset.views.main.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_msg_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/message_top"
            android:textColor="@color/colorTextBlue"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_first_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="12dp"
            android:text="@string/rule_first"
            android:textColor="@color/colorTextBlue"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_msg_top" />

        <TextView
            android:id="@+id/txt_rule_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/rule_second"
            android:textColor="@color/colorTextBlue"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_first_rule" />

        <TextView
            android:id="@+id/txt_security_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/security_info"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_rule_second"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:id="@+id/relative_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="#fff"
            android:elevation="@dimen/default_elevation"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_security_tip"
            app:layout_constraintVertical_bias="0.1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinput_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edit_reset_password_margin"
                android:layout_marginStart="@dimen/edit_reset_password_margin"
                android:layout_marginTop="@dimen/default_margin"
                app:passwordToggleDrawable="@drawable/ic_show_hide_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorTextGray">

                <EditText
                    android:id="@+id/edit_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:maxLength="18" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtinput_new_password"
                android:layout_marginEnd="@dimen/edit_reset_password_margin"
                android:layout_marginStart="38dp"
                android:textColor="@color/colorError"
                android:textSize="@dimen/text_small" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtinput_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_password_error"
                android:layout_marginEnd="@dimen/edit_reset_password_margin"
                android:layout_marginStart="@dimen/edit_reset_password_margin"
                app:passwordToggleDrawable="@drawable/ic_show_hide_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorTextGray">

                <EditText
                    android:id="@+id/edit_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="18" />


            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imgview_locker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_password" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/round_border_inactive"
            android:enabled="false"
            android:text="@string/button_confirm"
            android:textColor="@color/colorTextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_password"
            app:layout_constraintVertical_bias="0.33" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
